JavaEE pour les pizza avec affichage bootsrap

--- a/pizzeria-maven/pizzeria-admin-web/src/main/webapp/style.css
+++ b/pizzeria-maven/pizzeria-admin-web/src/main/webapp/style.css
@@ -53,6 +53,12 @@
         .btn-primary:hover {
             background-color: burlywood;
         }
+        
+        #singlebutton{
+        	display: block;
+        	margin: 25px;
+        	text-align: center;
+        }
 
         .container{
             margin: auto;
